--- a/CorrectorOrtografico/src/Vista/VentanaPrincipal.form
+++ b/CorrectorOrtografico/src/Vista/VentanaPrincipal.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Vista.VentanaPrincipal">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="411" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -32,7 +32,7 @@
           <text value="Sustitucion personalizada"/>
         </properties>
       </component>
-      <component id="358b9" class="javax.swing.JEditorPane" binding="texto">
+      <component id="11884" class="javax.swing.JEditorPane" binding="texto">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
