--- a/CorrectorOrtografico/src/Vista/VentanaPrincipal.form
+++ b/CorrectorOrtografico/src/Vista/VentanaPrincipal.form
@@ -32,14 +32,19 @@
           <text value="Sustitucion personalizada"/>
         </properties>
       </component>
-      <component id="11884" class="javax.swing.JEditorPane" binding="texto">
+      <scrollpane id="759d5">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-      </component>
+        <border type="none"/>
+        <children>
+          <component id="11884" class="javax.swing.JEditorPane" binding="texto">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
