--- a/ReconocedorBanderas/src/Vista/Ventana.form
+++ b/ReconocedorBanderas/src/Vista/Ventana.form
@@ -109,12 +109,12 @@
           <text value="Seleccionar Bandera:"/>
         </properties>
       </component>
-      <component id="472" class="javax.swing.JLabel">
+      <component id="472" class="javax.swing.JLabel" binding="fileName">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="394dc" class="javax.swing.JComboBox" binding="seleccionBanderas">
@@ -123,12 +123,12 @@
         </constraints>
         <properties/>
       </component>
-      <component id="ac0dd" class="javax.swing.JLabel">
+      <component id="ac0dd" class="javax.swing.JLabel" binding="adivinadaName">
         <constraints>
           <grid row="4" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
